--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@feathersjs/errors": "^3.3.0",
     "@feathersjs/express": "^1.2.2",
     "@feathersjs/feathers": "^3.1.5",
+    "@vue/test-utils": "^1.0.0-beta.16",
+    "chai": "^4.1.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "feathers-memory": "^2.1.1",
