--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "27017:27017"
     volumes:
       - 'mongodb_data:/bitnami'
+    restart: unless-stopped
 
 volumes:
   mongodb_data:
