--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test": "npm run eslint && npm run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "start": "node src/",
+    "watch": "nodemon src/",
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
@@ -33,18 +34,25 @@
     "@feathersjs/errors": "^3.3.0",
     "@feathersjs/express": "^1.2.2",
     "@feathersjs/feathers": "^3.1.5",
+    "@octokit/rest": "^15.8.1",
     "@vue/test-utils": "^1.0.0-beta.16",
     "chai": "^4.1.2",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "feathers-memory": "^2.1.1",
     "feathers-mongodb": "^3.1.0",
     "feathers-mongoose": "^6.1.1",
+    "feathers-sequelize": "^3.1.2",
     "global": "^4.3.2",
     "helmet": "^3.12.1",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.2",
+    "nodemon": "^1.17.5",
+    "ramda": "^0.25.0",
+    "sequelize": "^4.37.10",
     "serve-favicon": "^2.5.0",
+    "sqlite3": "^4.0.0",
     "uuid": "^3.2.1",
     "winston": "^2.4.2"
   },
