feat: initial commit, WIP

--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
+    "feathers-logger": "^0.3.2",
     "feathers-memory": "^2.1.1",
     "feathers-mongodb": "^3.1.0",
     "feathers-mongoose": "^6.1.1",
     "feathers-sequelize": "^3.1.2",
     "global": "^4.3.2",
     "helmet": "^3.12.1",
+    "jira-client": "^6.4.1",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.2",
     "nodemon": "^1.17.5",
