--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,10 @@
     "feathers-vuex": "^1.4.2",
     "font-awesome": "^4.7.0",
     "github-markdown-css": "^2.10.0",
+    "markdown": "^0.5.0",
+    "marked": "^0.4.0",
     "material-design-icons-iconfont": "^3.0.3",
+    "ramda": "^0.25.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "vue": "^2.5.16",
